--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
